# email

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
skills/gmail/: AUTOMATION.md  PRIORITIZATION.md  SKILL.md  TRIAGE.md
src/email_assistant/: __init__.py  server.py
src/email_assistant/gmail/: __init__.py  auth.py  client.py  models.py
src/email_assistant/rules/: __init__.py  engine.py  models.py  parser.py
src/email_assistant/storage/: __init__.py  db.py
src/email_assistant/triage/: __init__.py  categorizer.py  scorer.py
tests/: __init__.py
